changes according to feedback.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
         timeout: 10s
         retries: 5
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data #persisting data 
+      - ./postgres_data:/var/lib/postgresql/data # Persisting data
             
   pgadmin:  
     container_name: pgadmin
@@ -24,8 +24,9 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
+      - PGADMIN_CONFIG_WTF_CSRF_ENABLED=False  # Disable CSRF for local development
     ports:
-      - 5050:80 # for local browser (80 is the default port of the browsed)
+      - 5050:80 # for local browser
     volumes:
       - ./pgadmin_data:/var/lib/pgadmin  # Persisting pgAdmin configuration and sessions
     depends_on: 
@@ -45,30 +46,3 @@ services:
         condition: service_healthy
     healthcheck:
       test: "exit 0"
-  # api:
-  #   build:
-  #     context: ./api
-  #     dockerfile: Dockerfile
-  #   command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn main:app --host 0.0.0.0'
-  #   volumes:
-  #     - ./api:/api
-  #   ports:
-  #     - 8008:8000
-  #   environment:
-  #     - DATABASE_URL=${DATABASE_URL}
-  #   depends_on:
-  #     - db
-
-  # app:
-  #   container_name: streamlit_app
-  #   build:
-  #     context: ./app
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ./app:/app
-  #   ports:
-  #     - 8501:8501
-  #   environment:
-  #     - API_URL=http://api:8000
-  #   depends_on:
-  #     - api
